--- a/Sln_Proyecto_Monica_Elvis/prj_Alissez_Estetica/prj_Alissez_Estetica.csproj
+++ b/Sln_Proyecto_Monica_Elvis/prj_Alissez_Estetica/prj_Alissez_Estetica.csproj
@@ -77,6 +77,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="CambioPassword.aspx" />
     <Content Include="Content\bootstrap-grid.css" />
     <Content Include="Content\bootstrap-grid.min.css" />
     <Content Include="Content\bootstrap-reboot.css" />
@@ -155,6 +156,13 @@
     <Content Include="Scripts\popper-utils.js.map" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CambioPassword.aspx.cs">
+      <DependentUpon>CambioPassword.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="CambioPassword.aspx.designer.cs">
+      <DependentUpon>CambioPassword.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Detalle_Procedimiento.cs">
       <DependentUpon>MDAlissez.tt</DependentUpon>
     </Compile>
